--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
-    <title>Admin App - Flipkart</title>
+    <title>Flipkart - Admin Dashboard</title>
   </head>
   <body>
     <div id="root"></div>
